[DROOLS-7036] Fix kie-drl build